# Pack_Manager

./: README.md
ResourcepackManager/: CMakeLists.txt  Item Components List.txt  MakeScanRP2  ScanRP2 BKP.c  ScanRP2.c  Something for Later.txt  icon.rc  tempCodeRunnerFile.c
ResourcepackManager/instructions/: Blocks.instruct.txt  Finn's Workshop (Personal).txt  Finn's Workshop 1.12.2.txt  Finn's Workshop 1.21.4.txt  JsonDebug.txt  Mochimon Blocks.txt  Painted.txt
ResourcepackManager/lang/: de-de.txt  en-us.txt  pt-br.txt
ResourcepackManager/log/: log.txt  log_test.txt
ResourcepackManager/templates/: atlases.json  atlases.txt  blockstates.txt  charge.json  components.txt  condition.json  model.txt  range.json  select.json  using.json
